# article-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  api.http  docker-compose.yml  main.py  pyproject.toml  repomix-output.xml  test_api.py  test_gre_request.json  test_request.json
.claude/: CLAUDE.md  pocketFlow.md  prd.md  task.md
app/: __init__.py
app/api/: __init__.py
app/api/routes/: __init__.py  generate.py
app/core/: __init__.py  config.py  exceptions.py
app/models/: __init__.py  request.py  response.py
app/services/: __init__.py  article_generator.py  llm_service.py  template_service.py
app/utils/: __init__.py  validators.py
configs/: exam_configs.json
templates/: prompt_templates.py
tests/: __init__.py  test_api_integration.py  test_config.py  test_exceptions.py  test_llm_service.py  test_phase2_features.py  test_validators.py
